# CrystalMatch

./: Pipfile  README.md  requirements.txt  setup.cfg  setup.py
CrystalMatch/dls_focusstack/focus/: focus_stack_lap_pyramid.py  sharpness_detector.py  test_image_fft_manager.py
CrystalMatch/dls_imagematch/: logconfig.py  version.py
CrystalMatch/dls_imagematch/crystal/align/: config.py  overlay.py  test_imageAligner.py
CrystalMatch/dls_imagematch/crystal/match/: test_crystalMatch.py
CrystalMatch/dls_imagematch/feature/detector/: config.py  detector.py  detector_brisk.py  detector_orb.py  detector_types.py  factory.py  opencv_detector_interface.py  types.py
CrystalMatch/dls_imagematch/feature/transform/: calculator.py
CrystalMatch/dls_imagematch/service/: parser_manager.py  service.py  service_result.py  test_parser_manager.py  test_serviceResult.py
CrystalMatch/dls_util/shape/: point.py  test_point.py  test_polygon.py  test_rectangle.py
docs/: deployment.md  setup.md  user_guide.md
docs/release-notes/: release-notes-dev.md  release-notes-v1_1_0.md  release-notes-v1_2_0.md
system-tests/: system_test.py
system-tests/command_line_tests/: test_command_line_flags.py  test_config_dir_flag.py  test_run_from_command_line.py  test_scale_command_line_flags.py
system-tests/config_tests/: test_crystal_match_config_file.py
system-tests/config_tests/test_crystal_match_config_file/expected/test_crystal_config_file_default_match_expected/: crystal.ini
system-tests/log_tests/: test_logging_functions.py
system-tests/service_tests/: test_different_image_sizes.py  test_global_alignment_transform.py  test_image_scaling.py  test_service_json_output.py  test_service_output.py
