[metadata]
name = CrystalMatch
#version = file: CrystalMatch/VERSION
version = CrystalMatch.VersionHandler.__version__
description = Python Toolkit for Matching Points on Formulatrix Images to Points on Beamline Images
long_description = file: README.md
#long_description_content_type = text/markdown
author = Urszula Neuman
author_email = urszula.neuman@diamond.ac.uk
license = 'Apache License 2.0'
url='https://github.com/DiamondLightSource/CrystalMatch

classifiers=
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        Development Status :: 5 - Production
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3.7


[options]
zip_safe = False
include_package_data = True
package_dir=
    =CrystalMatch
packages = find:
install_requires =
    numpy>=1.11.1
    scipy>=0.19.1
    pygelf>=0.3.1
    opencv-python
    mock>=1.0.1

[options.packages.find]
where = CrystalMatch

#[options.package_data]
#CrystalMatch = VERSION

[options.entry_points]
console_scripts =
    CrystalMatch = CrystalMatch.dls_imagematch.main_service:main
